# keypo-cli

./: .env.example  .gitignore  .gitmodules  .npmignore  CLAUDE.md  README.md  SKILL.md  keypo-account-spec.md  keypo-implementation-roadmap.md  keypo-vault-spec.md  keypo-wallet-spec.md  package.json
.claude/commands/: release.md
.github/workflows/: foundry.yml  release-openclaw.yml  release.yml  rust.yml  swift.yml
demo/checkout/: .env.vault-template  CLAUDE.md
demo/hermes-checkout/: README.md
demo/sneakerbot/: .env.vault-template  README.md  SKILL.md  docker-compose.yml  run-with-vault.sh
deployments/: README.md
docs/: architecture.md  conventions.md  deployment.md  documentation-spec.md  keypo-pay-architecture.md  manual-testing.md  quality.md  setup.md
docs/archive/: keypo-implementation-roadmap.md  keypo-vault-spec.md  keypo-wallet-unified-cli-spec.md  manual-testing-original.md  manual-testing.md  plan-draft-unified-cli.md  project-history.md  unified-cli-manual-testing.md
docs/decisions/: 001-eip7702-ephemeral-eoa.md  002-p256-prehash-signing.md  003-erc7821-batch-mode.md  004-alloy-version-pinning.md  005-keypo-signer-subprocess.md  006-paymaster-gas-field-preservation.md  (+1 more)
keypo-account/: README.md
keypo-openclaw/: Cargo.toml  README.md
keypo-openclaw/src/: add.rs  config.rs  error.rs  init.rs  list.rs  main.rs  naming.rs  remove.rs  resolve.rs  signer.rs  status.rs
keypo-pay/: README.md
keypo-signer/: CLAUDE.md  JSON-FORMAT.md  README.md
keypo-signer-cli/: CLAUDE.md  JSON-FORMAT.md  README.md
keypo-wallet/: Cargo.toml  README.md
(+111 files in other folders)
