[package]
name = "keypo-openclaw"
version = "0.1.0"
edition = "2021"
description = "Hardware-secured secrets for OpenClaw via Secure Enclave"
license = "MIT"

[[bin]]
name = "keypo-openclaw"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
dirs = "6"
regex = "1"
json_comments = "0.2"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
